[package]
name = "mygame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#remove dynamic linking after completing a project
[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] } 
rand = "0.8.5"

#remove image after project

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
